# Pico_AutoInput

./: .gitmodules  CMakeLists.txt  LICENSE  Pico_AutoInput.cpp  README.md  ScriptProcessor.cpp  SwitchSerialController_pico.ino  build.bat  circle_mouse.txt  flash.h  gosub_test.txt  html_to_c_header.py  ispressed_click.txt  ispressed_click_mixedcase.txt  ispressed_led.txt  key_test.txt  led_test.txt  mode_switch_test.txt  mouserun_play.txt  mouserun_play_fix.txt  mouserun_stream copy.txt  mouserun_stream.txt  procon_verify.txt  rainbow.txt  spirograph.txt  usage_html.h  usb_descriptors.cpp  usb_descriptors.h  verify_keyboard.py  使い方.html  言語仕様.txt
SwitchControllerPico/src/: NintendoSwitchControllPico.cpp  NintendoSwitchControllPico.h  SwitchControllerPico.cpp  SwitchControllerPico.h
editor/: index.html  package-lock.json  package.json  vite.config.js
editor/src/: autocomplete.js  constants.js  editor.js  main.js  samples.html  style.css  ui.js
html/: 00_header.html  01_body_layout.html  02_script_setup.html  03_script_core.html  04_script_features.html
